@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-06-28"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080628
-#define RUBY_PATCHLEVEL 22
+#define RUBY_PATCHLEVEL 23
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
